giuly90 - bootratp patch. Fix warning message z-index

--- a/src/scss/leaflet-gesture-handling.scss
+++ b/src/scss/leaflet-gesture-handling.scss
@@ -24,7 +24,7 @@
         right: 0;
         bottom: 0;
         background: rgba(0, 0, 0, 0.5);
-        z-index: 9999;
+        z-index: 461;
         pointer-events:none;
     }
 }
